2012-08-22  Robby Stephenson  <robby@periapsis.org>

	* Corrected actor and role order in Allocine API fetcher.

2012-08-07  Robby Stephenson  <robby@periapsis.org>

	* Fixed a bug with adding new fields when importing bibtex (Bug 304767).

2012-07-13  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.6.

2012-06-10  Robby Stephenson  <robby@periapsis.org>

	* Added simple importer for CIW files from ISI.

2012-05-30  Robby Stephenson  <robby@periapsis.org>

	* Added data sources for IMDB in French, Spanish, German, Italian, and Portuguese.

2012-05-12  Robby Stephenson  <robby@periapsis.org>

	* Fixed a bug with loading images from Google Book search (Bug 299789).

2012-05-06  Robby Stephenson  <robby@periapsis.org>

	* Added API data source for HathiTrust.

2012-05-04  Robby Stephenson  <robby@periapsis.org>

	* Fixed a bug when using a local image directory for a file that has not yet been saved (Bug 299130).

2012-04-20  Robby Stephenson  <robby@periapsis.org>

	* Added API data sources for Allocine, ScreenRush, FilmStarts, SensaCine, and Beyazperde.

2012-03-23  Robby Stephenson  <robby@periapsis.org>

	* Fixed bugs in IBS.it data source.

2012-03-14  Robby Stephenson  <robby@periapsis.org>

	* Added data source for Springer Link.

2012-03-09  Robby Stephenson  <robby@periapsis.org>

	* Added data source for the Microsoft Academic Search.

2012-02-26  Robby Stephenson  <robby@periapsis.org>

	* Fixed a crashing bug when entering multiple ISBN values in search.
	* Improved Amazon search for US UPC values from non-UPC sites.

2012-01-15  Robby Stephenson  <robby@periapsis.org>

	* Fixed a crashing bug when using the scanner dialog.
	* Released Tellico 2.3.5.

2011-12-26  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with merging entries. Entry IDs will never be different
	so don't warn the user (Bug 289346).
	* Fixed bug with Cancel not working in the Entry Merge dialog.

2011-12-17  Robby Stephenson  <robby@periapsis.org>
