@@ -37,6 +37,7 @@ public:
 private Q_SLOTS:
   void initTestCase();
   void testTitle();
+  void testTitleAccented();
   void testUPC();
 
 private:
